[package]
name = "bevy_city"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "e696fa75260d52129df53db4328aca64c068d613", default-features = false, features = [
    "3d",
    "free_camera",
    "bevy_dev_tools"
] }
noise = "0.9.0"
rand = "0.10.0"
